<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">

        <ImageView
            android:id="@+id/welcome_picture"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:src="@drawable/hangedman" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangman_welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:text="@string/choose_a_category" />

        <LinearLayout
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/category_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_1" />

            <Button
                android:id="@+id/category_jakob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_2" />

            <Button
                android:id="@+id/category_computergames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_3" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>